Adding a founders section to index

--- a/kelabros/components/index.html
+++ b/kelabros/components/index.html
@@ -222,6 +222,71 @@
     </div>
   </div>
 
+    <hr />
+
+  <div class="foundersSection">
+    <h3>Pioneers</h3>
+    <div class="card-deck">
+
+      <div class="card">
+        <img class="card-img-top" src="images/bg1.jpg" />
+        <div class="card-body">
+          <h4 class="card-title">Name 1</h4>
+          <p>Some information about Name1</p>
+        </div>
+        <div class="card-footer">
+          <h6 class="card-text">Founder</h6>
+        </div>
+      </div>
+
+      <div class="card">
+        <img class="card-img-top" src="images/bg1.jpg" />
+        <div class="card-body">
+          <h4 class="card-title">Name 2</h4>
+          <p>Some information about Name2</p>
+        </div>
+        <div class="card-footer">
+          <h6 class="card-text">Founder</h6>
+        </div>
+      </div>
+
+      <div class="card">
+        <img class="card-img-top" src="images/bg1.jpg" />
+        <div class="card-body">
+          <h4 class="card-title">Name 3</h4>
+          <p>Some information about Name3</p>
+        </div>
+        <div class="card-footer">
+          <h6 class="card-text">Founder</h6>
+        </div>
+      </div>
+
+      <div class="card">
+        <img class="card-img-top" src="images/bg1.jpg" />
+        <div class="card-body">
+          <h4 class="card-title">Name 4</h4>
+          <p>Some information about Name4</p>
+        </div>
+        <div class="card-footer">
+          <h6 class="card-text">Founder</h6>
+        </div>
+      </div>
+
+      <div class="card">
+        <img class="card-img-top" src="images/bg1.jpg" />
+        <div class="card-body">
+          <h4 class="card-title">Name 5</h4>
+          <p>Some information about Name5</p>
+        </div>
+        <div class="card-footer">
+          <h6 class="card-text">Founder</h6>
+        </div>
+      </div>
+
+
+    </div>
+  </div>
+
   <div id="footer">
   </div>
 
