Adding dropdown in navbar

--- a/kelabros/components/index.html
+++ b/kelabros/components/index.html
@@ -82,9 +82,9 @@
           </a>
         </div>
         <div class="col-6 col-lg-2 col-sm-4">
-          <a href="dryFruits.html">
+          <a href="exclusive.html">
             <img src="images/bg1.jpg" class="product-image rounded-circle border border-white" width="150" height="150">
-            <h2>X_X</h2>
+            <h2>Exclusive</h2>
           </a>
         </div>
       </div>
