--- a/kelabros/components/Header.html
+++ b/kelabros/components/Header.html
@@ -1,25 +1,37 @@
 <nav class="navbar navbar-expand-lg">
 
-    <div class="navbar-brand">
-        <img src="images/Logo_Trans.png"/>
-    </div>
+  <div class="navbar-brand">
+    <img src="images/Logo_Trans.png" />
+  </div>
 
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02">
-        <span class="navbar-toggler-icon"><i class="fa fa-bars" aria-hidden="true"></i></span>
-    </button>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02">
+    <span class="navbar-toggler-icon"><i class="fa fa-bars" aria-hidden="true"></i></span>
+  </button>
 
-    <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+  <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
 
-        <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-                <a class="nav-link" href="index.html">HOME</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="about.html">ABOUT</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="contact.html">CONTACT</a>
-            </li>
-        </ul>
-    </div>
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item">
+        <a class="nav-link" href="index.html">HOME</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          PRODUCTS
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="/dryfruits.html">Dry Fruits</a>
+          <a class="dropdown-item" href="/spices.html">Spices</a>
+          <a class="dropdown-item" href="/organics.html">Organics</a>
+          <a class="dropdown-item" href="/nutrition.html">Nutrition</a>
+          <a class="dropdown-item" href="/exclusive.html">Exclusive</a>
+        </div>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="about.html">ABOUT</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="contact.html">CONTACT</a>
+      </li>
+    </ul>
+  </div>
 </nav>
