--- a/kelabros/components/index.html
+++ b/kelabros/components/index.html
@@ -33,10 +33,10 @@
           <img src="images/bannerImage1.jpg" class="banner-image d-block mx-auto">
         </div>
         <div class="carousel-item">
-          <img src="images/bannerImage1.jpg" class="banner-image d-block mx-auto">
+          <img src="images/bannerImage3.png" class="banner-image d-block mx-auto">
         </div>
         <div class="carousel-item">
-          <img src="images/bannerImage1.jpg" class="banner-image d-block mx-auto">
+          <img src="images/bannerImage4.png" class="banner-image d-block mx-auto">
         </div>
       </div>
       <a class="carousel-control-prev" href="#bannerCarousel" role="button" data-slide="prev">
@@ -222,9 +222,9 @@
     </div>
   </div>
 
-    <hr />
+    <!-- <hr /> -->
 
-  <div class="foundersSection">
+  <!-- <div class="foundersSection">
     <h3>Pioneers</h3>
     <div class="card-deck">
 
@@ -285,7 +285,7 @@
 
 
     </div>
-  </div>
+  </div> -->
 
   <div id="footer">
   </div>
