Spices Data Added

--- a/kelabros/components/spices.html
+++ b/kelabros/components/spices.html
@@ -23,41 +23,65 @@
 <div class="dryfruits">
   <div class="protypes" id="sectionName1">
     <div data-target="#dryFruit1">
-      <h3>Almonds  </h3>
+      <h3>Spices</h3>
     </div>
     <div id="dryFruit1" class="multi-collapse container dry-fruit-content" data-parent="#sectionName1">
       <div class="dry-fruit-cards">
-        <span> Nutritional Fact about Almonds </span>
+        <span> Nutritional Fact about Spices </span>
       </div>
       <div class="products products-five row">
-        <div class="col-lg-2 col-md-4 col-sm-4">
+        <div class="spices-products col-lg-4 col-md-4 col-sm-4">
           <div data-toggle="collapse" data-target="#dryFruit1Content1" data-parent="#dryFruit1">
             <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
-            <h2>Almond</h2>
+            <h2>Dalchini</h2>
           </div>
         </div>
-        <div class="col-lg-2 col-md-4 col-sm-4">
+        <div class="spices-products col-lg-4 col-md-4 col-sm-4">
           <div data-toggle="collapse" data-target="#dryFruit1Content2" data-parent="#dryFruit1">
             <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
-            <h2>Masala Almond</h2>
+            <h2>Lavang</h2>
           </div>
         </div>
-        <div class="col-lg-2 col-md-4 col-sm-4">
+        <div class="spices-products col-lg-4 col-md-4 col-sm-4">
           <div data-toggle="collapse" data-target="#dryFruit1Content3" data-parent="#dryFruit1">
             <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
-            <h2>Salted Almond</h2>
+            <h2>Elaichi</h2>
           </div>
         </div>
-        <div class="col-lg-2 col-md-4 col-sm-4">
+        <div class="spices-products col-lg-4 col-md-4 col-sm-4">
           <div data-toggle="collapse" data-target="#dryFruit1Content4" data-parent="#dryFruit1">
             <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
-            <h2>Chocolate Almond</h2>
+            <h2>Tamalpatra</h2>
           </div>
         </div>
-        <div class="col-lg-2 col-md-4 col-sm-4">
+        <div class="spices-products col-lg-4 col-md-4 col-sm-4">
           <div data-toggle="collapse" data-target="#dryFruit1Content5" data-parent="#dryFruit1">
             <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
-            <h2>Rare Variety</h2>
+            <h2>Dagadphool</h2>
+          </div>
+        </div>
+        <div class="spices-products col-lg-4 col-md-4 col-sm-4">
+          <div data-toggle="collapse" data-target="#dryFruit1Content6" data-parent="#dryFruit1">
+            <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
+            <h2>Hing</h2>
+          </div>
+        </div>
+        <div class="spices-products col-lg-4 col-md-4 col-sm-4">
+          <div data-toggle="collapse" data-target="#dryFruit1Content7" data-parent="#dryFruit1">
+            <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
+            <h2>Dhana</h2>
+          </div>
+        </div>
+        <div class="spices-products col-lg-4 col-md-4 col-sm-4">
+          <div data-toggle="collapse" data-target="#dryFruit1Content8" data-parent="#dryFruit1">
+            <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
+            <h2>Jeera</h2>
+          </div>
+        </div>
+        <div class="spices-products col-lg-4 col-md-4 col-sm-4">
+          <div data-toggle="collapse" data-target="#dryFruit1Content9" data-parent="#dryFruit1">
+            <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
+            <h2>Masala Elaichi</h2>
           </div>
         </div>
       </div>
@@ -92,177 +116,6 @@
   </div>
 
   <hr  />
-  
-  <div class="protypes" id="sectionName2">
-    <div data-target="#dryFruit2">
-      <h3>Walnuts </h3>
-    </div>
-    <div id="dryFruit2" class="multi-collapse container dry-fruit-content" data-parent="#sectionName2">
-      <div class="dry-fruit-cards">
-        <span> QWERTY </span>
-      </div>
-      <div class="products products-three row">
-        <div class="col-lg-4 col-md-4 col-sm-4">
-          <div data-toggle="collapse" data-target="#dryFruit2Content1" data-parent="#dryFruit2">
-            <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
-            <h2>Walnuts One</h2>
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-4 col-sm-4">
-          <div data-toggle="collapse" data-target="#dryFruit2Content2" data-parent="#dryFruit2">
-            <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
-            <h2>Walnuts Two</h2>
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-4 col-sm-4">
-          <div data-toggle="collapse" data-target="#dryFruit2Content3" data-parent="#dryFruit2">
-            <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
-            <h2>Walnuts Three</h2>
-          </div>
-        </div>
-      </div>
-      <div class="products information row">
-        <div class="collapse multi-collapse w-100" id="dryFruit2Content1" data-parent="#dryFruit2">
-          <div class="card card-body">
-            Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
-          </div>
-        </div>
-        <div class="collapse multi-collapse w-100" id="dryFruit2Content2" data-parent="#dryFruit2">
-          <div class="card card-body">
-            Content II Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
-          </div>
-        </div>
-        <div class="collapse multi-collapse w-100" id="dryFruit2Content3" data-parent="#dryFruit2">
-          <div class="card card-body">
-            Content III Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <hr  />
-
-  <div class="protypes" id="sectionName3">
-    <div data-target="#dryFruit3">
-      <h3>Pistachios </h3>
-    </div>
-    <div id="dryFruit3" class="multi-collapse container dry-fruit-content" data-parent="#sectionName3">
-      <div class="dry-fruit-cards">
-        <span> Pistachios Nutritional Fact </span>
-      </div>
-      <div class="products products-five row">
-        <div class="col-lg-2 col-md-4 col-sm-4">
-          <div data-toggle="collapse" data-target="#dryFruit3Content1" data-parent="#dryFruit3">
-            <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
-            <h2>Pistachios</h2>
-          </div>
-        </div>
-        <div class="col-lg-2 col-md-4 col-sm-4">
-          <div data-toggle="collapse" data-target="#dryFruit3Content2" data-parent="#dryFruit3">
-            <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
-            <h2>Salted Pistachios</h2>
-          </div>
-        </div>
-        <div class="col-lg-2 col-md-4 col-sm-4">
-          <div data-toggle="collapse" data-target="#dryFruit3Content3" data-parent="#dryFruit3">
-            <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
-            <h2>Masala Pistachios</h2>
-          </div>
-        </div>
-        <div class="col-lg-2 col-md-4 col-sm-4">
-          <div data-toggle="collapse" data-target="#dryFruit3Content4" data-parent="#dryFruit3">
-            <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
-            <h2>Pistachios 4</h2>
-          </div>
-        </div>
-        <div class="col-lg-2 col-md-4 col-sm-4">
-          <div data-toggle="collapse" data-target="#dryFruit3Content5" data-parent="#dryFruit3">
-            <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
-            <h2>Pistachios 5</h2>
-          </div>
-        </div>
-      </div>
-      <div class="products information row">
-        <div class="collapse multi-collapse w-100" id="dryFruit3Content1" data-parent="#dryFruit3">
-          <div class="card card-body">
-            Pistachios fact
-          </div>
-        </div>
-        <div class="collapse multi-collapse w-100" id="dryFruit3Content2" data-parent="#dryFruit3">
-          <div class="card card-body">
-            Content II Salted Pistachios fact.
-          </div>
-        </div>
-        <div class="collapse multi-collapse w-100" id="dryFruit3Content3" data-parent="#dryFruit3">
-          <div class="card card-body">
-            Content III Masala Pistachios fact.
-          </div>
-        </div>
-        <div class="collapse multi-collapse w-100" id="dryFruit3Content4" data-parent="#dryFruit3">
-          <div class="card card-body">
-            Content IV Pistachios 4 fact.
-          </div>
-        </div>
-        <div class="collapse multi-collapse w-100" id="dryFruit3Content5" data-parent="#dryFruit3">
-          <div class="card card-body">
-            Content V Pistachios 5 fact.
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <hr />
-
-  <div class="protypes" id="sectionName4">
-    <div data-target="#dryFruit4">
-      <h3>Cashew </h3>
-    </div>
-    <div id="dryFruit4" class="multi-collapse container dry-fruit-content" data-parent="#sectionName4">
-      <div class="dry-fruit-cards">
-        <span> Cashew Nutritional Facts </span>
-      </div>
-      <div class="products products-three row">
-        <div class="col-lg-4 col-md-4 col-sm-4">
-          <div data-toggle="collapse" data-target="#dryFruit4Content1" data-parent="#dryFruit4">
-            <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
-            <h2>Cashew</h2>
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-4 col-sm-4">
-          <div data-toggle="collapse" data-target="#dryFruit4Content2" data-parent="#dryFruit4">
-            <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
-            <h2>Masala Cashew</h2>
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-4 col-sm-4">
-          <div data-toggle="collapse" data-target="#dryFruit4Content3" data-parent="#dryFruit4">
-            <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
-            <h2>Chocolate Cashew</h2>
-          </div>
-        </div>
-      </div>
-      <div class="products information row">
-        <div class="collapse multi-collapse w-100" id="dryFruit4Content1" data-parent="#dryFruit4">
-          <div class="card card-body">
-            Cashew facts.
-          </div>
-        </div>
-        <div class="collapse multi-collapse w-100" id="dryFruit4Content2" data-parent="#dryFruit4">
-          <div class="card card-body">
-            Content II Masala Cashew facts.
-          </div>
-        </div>
-        <div class="collapse multi-collapse w-100" id="dryFruit4Content3" data-parent="#dryFruit4">
-          <div class="card card-body">
-            Content III Chocolate Cashew facts.
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
 </div>
 
 <div id="footer">
