--- a/kelabros/components/dryFruits.html
+++ b/kelabros/components/dryFruits.html
@@ -22,10 +22,10 @@
 
   <div class="dryfruits">
     <div class="protypes" id="sectionName1">
-      <div data-toggle="collapse" data-target="#dryFruit1" data-parent="#sectionName1">
-        <h3>Almonds <i class="fas fa-chevron-down fa-md"></i> </h3>
+      <div data-target="#dryFruit1">
+        <h3>Almonds  </h3>
       </div>
-      <div id="dryFruit1" class="collapse multi-collapse container dry-fruit-content" data-parent="#sectionName1">
+      <div id="dryFruit1" class="multi-collapse container dry-fruit-content" data-parent="#sectionName1">
         <div class="dry-fruit-cards">
           <span> Nutritional Fact about Almonds </span>
         </div>
@@ -91,13 +91,13 @@
       </div>
     </div>
 
-    <hr />
+    <hr  />
 
     <div class="protypes" id="sectionName2">
-      <div data-toggle="collapse" data-target="#dryFruit2" data-parent="#sectionName2">
-        <h3>Walnuts <i class="fas fa-chevron-down fa-md"></i></h3>
+      <div data-target="#dryFruit2">
+        <h3>Walnuts </h3>
       </div>
-      <div id="dryFruit2" class="collapse multi-collapse container dry-fruit-content" data-parent="#sectionName2">
+      <div id="dryFruit2" class="multi-collapse container dry-fruit-content" data-parent="#sectionName2">
         <div class="dry-fruit-cards">
           <span> QWERTY </span>
         </div>
@@ -144,10 +144,10 @@
     <hr  />
 
     <div class="protypes" id="sectionName3">
-      <div data-toggle="collapse" data-target="#dryFruit3" data-parent="#sectionName3">
-        <h3>Pistachios <i class="fas fa-chevron-down fa-md"></i></h3>
+      <div data-target="#dryFruit3">
+        <h3>Pistachios </h3>
       </div>
-      <div id="dryFruit3" class="collapse multi-collapse container dry-fruit-content" data-parent="#sectionName3">
+      <div id="dryFruit3" class="multi-collapse container dry-fruit-content" data-parent="#sectionName3">
         <div class="dry-fruit-cards">
           <span> Pistachios Nutritional Fact </span>
         </div>
@@ -216,10 +216,10 @@
     <hr />
 
     <div class="protypes" id="sectionName4">
-      <div data-toggle="collapse" data-target="#dryFruit4" data-parent="#sectionName4">
-        <h3>Cashew <i class="fas fa-chevron-down fa-md"></i></h3>
+      <div data-target="#dryFruit4">
+        <h3>Cashew </h3>
       </div>
-      <div id="dryFruit4" class="collapse multi-collapse container dry-fruit-content" data-parent="#sectionName4">
+      <div id="dryFruit4" class="multi-collapse container dry-fruit-content" data-parent="#sectionName4">
         <div class="dry-fruit-cards">
           <span> Cashew Nutritional Facts </span>
         </div>
