--- a/kelabros/components/stylesheets/style.css
+++ b/kelabros/components/stylesheets/style.css
@@ -142,7 +142,7 @@
   }
 
   .products-five{
-    padding: 2% 0 0 10%;
+    padding: 2% 0 0 2%;
   }
 
   @media only screen and (max-device-width: 800px) {
@@ -173,6 +173,11 @@
 
   .information{
     padding-bottom:2%;
+  }
+
+  .spices-products{
+    padding-top: 2%;
+    padding-bottom: 2%;
   }
 /* !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! */
 
@@ -364,10 +369,12 @@
 
   .dry-fruit-content{
     /* background-image: linear-gradient(180deg, #FFD57E, #AC4B1C); */
-    background-color: #290001;
+    /* background-color: #290001; */
+    background-color: #FFD57E;
     width: 96%;
     margin:2% 2%;
     padding: 1%;
+    border-radius: 1%;
   }
 
   @media only screen and (max-device-width: 760px) {
@@ -534,7 +541,7 @@
   }
 
   hr {
-    margin: 2% auto;
+    margin: 3% auto;
     width: 25%;
     border: none;
     height: 1px;
