Dry Fruits Data Added

--- a/kelabros/components/dryFruits.html
+++ b/kelabros/components/dryFruits.html
@@ -29,35 +29,47 @@
         <div class="dry-fruit-cards">
           <span> Nutritional Fact about Almonds </span>
         </div>
-        <div class="products products-five row">
-          <div class="col-lg-2 col-md-4 col-sm-4">
+        <div class="products products-three row">
+          <div class="col-lg-4 col-md-4 col-sm-4">
             <div data-toggle="collapse" data-target="#dryFruit1Content1" data-parent="#dryFruit1">
               <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
-              <h2>Almond</h2>
+              <h2>Selected Almonds</h2>
             </div>
           </div>
-          <div class="col-lg-2 col-md-4 col-sm-4">
+          <div class="col-lg-4 col-md-4 col-sm-4">
             <div data-toggle="collapse" data-target="#dryFruit1Content2" data-parent="#dryFruit1">
-              <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
-              <h2>Masala Almond</h2>
-            </div>
-          </div>
-          <div class="col-lg-2 col-md-4 col-sm-4">
-            <div data-toggle="collapse" data-target="#dryFruit1Content3" data-parent="#dryFruit1">
               <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
               <h2>Salted Almond</h2>
             </div>
           </div>
-          <div class="col-lg-2 col-md-4 col-sm-4">
+          <div class="col-lg-4 col-md-4 col-sm-4">
+            <div data-toggle="collapse" data-target="#dryFruit1Content3" data-parent="#dryFruit1">
+              <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
+              <h2>Oreo Almond</h2>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-4 col-sm-4">
             <div data-toggle="collapse" data-target="#dryFruit1Content4" data-parent="#dryFruit1">
               <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
               <h2>Chocolate Almond</h2>
             </div>
           </div>
-          <div class="col-lg-2 col-md-4 col-sm-4">
+          <div class="col-lg-4 col-md-4 col-sm-4">
             <div data-toggle="collapse" data-target="#dryFruit1Content5" data-parent="#dryFruit1">
               <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
-              <h2>Rare Variety</h2>
+              <h2>Coffee Almonds</h2>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-4 col-sm-4">
+            <div data-toggle="collapse" data-target="#dryFruit1Content6" data-parent="#dryFruit1">
+              <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
+              <h2>Mango Almond</h2>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-4 col-sm-4">
+            <div data-toggle="collapse" data-target="#dryFruit1Content7" data-parent="#dryFruit1">
+              <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
+              <h2>Mamra Almonds</h2>
             </div>
           </div>
         </div>
@@ -95,29 +107,47 @@
 
     <div class="protypes" id="sectionName2">
       <div data-target="#dryFruit2">
-        <h3>Walnuts </h3>
+        <h3>Cashews </h3>
       </div>
       <div id="dryFruit2" class="multi-collapse container dry-fruit-content" data-parent="#sectionName2">
         <div class="dry-fruit-cards">
-          <span> QWERTY </span>
+          <span> Nutritional Fact about Cashews </span>
         </div>
         <div class="products products-three row">
           <div class="col-lg-4 col-md-4 col-sm-4">
             <div data-toggle="collapse" data-target="#dryFruit2Content1" data-parent="#dryFruit2">
               <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
-              <h2>Walnuts One</h2>
+              <h2>Plain Cashew</h2>
             </div>
           </div>
           <div class="col-lg-4 col-md-4 col-sm-4">
             <div data-toggle="collapse" data-target="#dryFruit2Content2" data-parent="#dryFruit2">
               <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
-              <h2>Walnuts Two</h2>
+              <h2>Salted Cashew</h2>
             </div>
           </div>
           <div class="col-lg-4 col-md-4 col-sm-4">
             <div data-toggle="collapse" data-target="#dryFruit2Content3" data-parent="#dryFruit2">
               <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
-              <h2>Walnuts Three</h2>
+              <h2>Masala Cashew</h2>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-4 col-sm-4">
+            <div data-toggle="collapse" data-target="#dryFruit2Content4" data-parent="#dryFruit2">
+              <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
+              <h2>Kalimiri Cashew</h2>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-4 col-sm-4">
+            <div data-toggle="collapse" data-target="#dryFruit2Content5" data-parent="#dryFruit2">
+              <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
+              <h2>Cheese Cashew</h2>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-4 col-sm-4">
+            <div data-toggle="collapse" data-target="#dryFruit2Content6" data-parent="#dryFruit2">
+              <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
+              <h2>Pudina Cashew</h2>
             </div>
           </div>
         </div>
@@ -145,41 +175,29 @@
 
     <div class="protypes" id="sectionName3">
       <div data-target="#dryFruit3">
-        <h3>Pistachios </h3>
+        <h3>Exotic Nuts</h3>
       </div>
       <div id="dryFruit3" class="multi-collapse container dry-fruit-content" data-parent="#sectionName3">
         <div class="dry-fruit-cards">
-          <span> Pistachios Nutritional Fact </span>
+          <span> Nutritional Fact about Exotic Nuts </span>
         </div>
-        <div class="products products-five row">
-          <div class="col-lg-2 col-md-4 col-sm-4">
+        <div class="products products-three row">
+          <div class="col-lg-4 col-md-4 col-sm-4">
             <div data-toggle="collapse" data-target="#dryFruit3Content1" data-parent="#dryFruit3">
               <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
-              <h2>Pistachios</h2>
+              <h2>Brazil Nut</h2>
             </div>
           </div>
-          <div class="col-lg-2 col-md-4 col-sm-4">
+          <div class="col-lg-4 col-md-4 col-sm-4">
             <div data-toggle="collapse" data-target="#dryFruit3Content2" data-parent="#dryFruit3">
               <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
-              <h2>Salted Pistachios</h2>
+              <h2>Hazelnut</h2>
             </div>
           </div>
-          <div class="col-lg-2 col-md-4 col-sm-4">
+          <div class="col-lg-4 col-md-4 col-sm-4">
             <div data-toggle="collapse" data-target="#dryFruit3Content3" data-parent="#dryFruit3">
               <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
-              <h2>Masala Pistachios</h2>
-            </div>
-          </div>
-          <div class="col-lg-2 col-md-4 col-sm-4">
-            <div data-toggle="collapse" data-target="#dryFruit3Content4" data-parent="#dryFruit3">
-              <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
-              <h2>Pistachios 4</h2>
-            </div>
-          </div>
-          <div class="col-lg-2 col-md-4 col-sm-4">
-            <div data-toggle="collapse" data-target="#dryFruit3Content5" data-parent="#dryFruit3">
-              <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
-              <h2>Pistachios 5</h2>
+              <h2>Pecan Nut</h2>
             </div>
           </div>
         </div>
@@ -217,29 +235,47 @@
 
     <div class="protypes" id="sectionName4">
       <div data-target="#dryFruit4">
-        <h3>Cashew </h3>
+        <h3>Dryfruits</h3>
       </div>
       <div id="dryFruit4" class="multi-collapse container dry-fruit-content" data-parent="#sectionName4">
         <div class="dry-fruit-cards">
-          <span> Cashew Nutritional Facts </span>
+          <span> Nutritional Fact </span>
         </div>
         <div class="products products-three row">
           <div class="col-lg-4 col-md-4 col-sm-4">
             <div data-toggle="collapse" data-target="#dryFruit4Content1" data-parent="#dryFruit4">
               <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
-              <h2>Cashew</h2>
+              <h2>Anjeer</h2>
             </div>
           </div>
           <div class="col-lg-4 col-md-4 col-sm-4">
             <div data-toggle="collapse" data-target="#dryFruit4Content2" data-parent="#dryFruit4">
               <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
-              <h2>Masala Cashew</h2>
+              <h2>Jardalu</h2>
             </div>
           </div>
           <div class="col-lg-4 col-md-4 col-sm-4">
             <div data-toggle="collapse" data-target="#dryFruit4Content3" data-parent="#dryFruit4">
               <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
-              <h2>Chocolate Cashew</h2>
+              <h2>Kismis</h2>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-4 col-sm-4">
+            <div data-toggle="collapse" data-target="#dryFruit4Conten4" data-parent="#dryFruit4">
+              <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
+              <h2>Kala Manuka</h2>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-4 col-sm-4">
+            <div data-toggle="collapse" data-target="#dryFruit4Content5" data-parent="#dryFruit4">
+              <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
+              <h2>Salted Pista</h2>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-4 col-sm-4">
+            <div data-toggle="collapse" data-target="#dryFruit4Content6" data-parent="#dryFruit4">
+              <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
+              <h2>Kala Khajur</h2>
             </div>
           </div>
         </div>
