--- a/kelabros/components/stylesheets/style.css
+++ b/kelabros/components/stylesheets/style.css
@@ -155,11 +155,16 @@
     max-width: 70%
   }
 
+  .products-three div {
+    padding-top: 2%;
+    padding-bottom: 2%;
+  }
+
   .products h2 {
     font-size:1.3rem;
     font-weight: bold;
     color: #AC4B1C;
-    margin-top: 10%;
+    margin-top: 3%;
     padding: 5% 0;
   }
 
@@ -173,11 +178,6 @@
 
   .information{
     padding-bottom:2%;
-  }
-
-  .spices-products{
-    padding-top: 2%;
-    padding-bottom: 2%;
   }
 /* !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! */
 
@@ -363,8 +363,10 @@
     display: block;
     margin: 2% auto;
     width:50%;
-    background:khaki;
+    background:#290001;
     border-radius: 5px;
+    color: #FFD57E;
+    padding: 1%;
   }
 
   .dry-fruit-content{
